src/test/ui/lifetime-errors/ex1-return-one-existing-name-early-bound-in-struct.stderr
error[E0621]: explicit lifetime required in the type of `other`
  --> $DIR/ex1-return-one-existing-name-early-bound-in-struct.rs:21:21
   |
17 |     fn bar(&self, other: Foo) -> Foo<'a> {
   |                   ----- consider changing the type of `other` to `Foo<'a>`
...
21 |                     other //~ ERROR explicit lifetime
   |                     ^^^^^ lifetime `'a` required

error: aborting due to previous error

